--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Taskmaster Pro</title>
 </head>
@@ -20,13 +21,14 @@
             <p class="mt-auto">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa excepturi aut non laudantium sequi fugit officiis optio deleniti asperiores rem eius laborum maxime blanditiis culpa, quis iste?
             </p>
+
         </header>
         <main class="col-12 col-lg-9 d-flex flex-column">
             <div class="m-5 row justify-content-around">
                 <!--  -->
                 <div class="col-12 col-md-6 col-xl-3 mb-3">
                     <div class="card">
-                        <h4 class="card-header bg-dark text-light">To Do</h4>
+                        <h4 class="card-header bg-dark text-light d-flex align-items-center">To Do</h4>
                         <ul id="list-toDo" class="list-group list-group-flush">
                         </ul>
                     </div>
@@ -35,7 +37,7 @@
                 <!--in progress start-->
                 <div class="col-12 col-md-6 col-xl-3 mb-3">
                     <div class="card">
-                        <h4 class="card-header bg-dark text-light">In Progress
+                        <h4 class="card-header bg-dark text-light d-flex align-items-center">In Progress
               </h4>
                         <ul id="list-inProgress" class="list-group list-group-flush">
                         </ul>
@@ -45,7 +47,7 @@
                 <!--in review start-->
                 <div class="col-12 col-md-6 col-xl-3 mb-3">
                     <div class="card">
-                        <h4 class="card-header bg-dark text-light">In Review</h4>
+                        <h4 class="card-header bg-dark text-light d-flex align-items-center">In Review</h4>
                         <ul id="list-inReview" class="list-group list-group-flush">
                         </ul>
                     </div>
@@ -54,21 +56,23 @@
                 <!--done start-->
                 <div class="col-12 col-md-6 col-xl-3 mb-3">
                     <div class="card">
-                        <h4 class="card-header bg-dark text-light">Done</h4>
+                        <h4 class="card-header bg-dark text-light d-flex align-items-center">Done</h4>
                         <ul id="list-done" class="list-group list-group-flush">
                         </ul>
                     </div>
                 </div>
-                <!-- done end-->
-                <div class="mt-auto w-100 bg-danger p-3 text-center text-light display-4">Drop Here to Remove.</div>
             </div>
-
+            <!-- done end-->
+            <footer class="mt-auto" id="trash">
+                <div class="mt-auto w-100 bg-danger p-3 text-center text-light display-4 align-bottom-trash">
+                    <span class="oi oi-trash mx-auto mb-4">Drop Here to Remove</span>
+                </div>
+            </footer>
         </main>
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="task-form-modal" tabindex="-1" role="dialog" aria-labelledby="task-form-modal"
-        aria-hidden="true">
+    <div class="modal fade" id="task-form-modal" tabindex="-1" role="dialog" aria-labelledby="task-form-modal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -81,11 +85,11 @@
                     <form>
                         <div class="form-group">
                             <label for="modalTaskDescription">Task description</label>
-                            <textarea id="modalTaskDescription" rows="3"></textarea>
+                            <textarea class="form-control" id="modalTaskDescription" rows="3"></textarea>
                         </div>
                         <div class="form-group">
                             <label for="modalDueDate">Due date</label>
-                            <input type="text" id="modalDueDate" placeholder="mm/dd/yyyy" autocomplete="off" />
+                            <input type="text" class="form-control" id="modalDueDate" placeholder="mm/dd/yyyy" autocomplete="off" />
                         </div>
                     </form>
                 </div>
@@ -98,6 +102,8 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="./assets/js/script.js"></script>
