updating date time functionality

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 
     <div class="row min-vh-100 no-gutters">
         <header class="col-12 col-lg-3 bg-dark text-light sticky-top d-flex flex-column p-4 p-lg-3">
+            <div>
             <h1 class="text-center">Taskmaster Pro Edition</h1>
+                <div class ="ml-md-auto w-100 w-md-auto">
             <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">Add Task</button>
             <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
+            </div>
+            </div>
             <p class="mt-auto">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa excepturi aut non laudantium sequi fugit officiis optio deleniti asperiores rem eius laborum maxime blanditiis culpa, quis iste?
             </p>
@@ -37,8 +41,7 @@
                 <!--in progress start-->
                 <div class="col-12 col-md-6 col-xl-3 mb-3">
                     <div class="card">
-                        <h4 class="card-header bg-dark text-light d-flex align-items-center">In Progress
-              </h4>
+                        <h4 class="card-header bg-dark text-light d-flex align-items-center">In Progress</h4>
                         <ul id="list-inProgress" class="list-group list-group-flush">
                         </ul>
                     </div>
