--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -21,8 +21,8 @@
             <div>
             <h1 class="text-center"><span class="oi oi-task d-inline d-lg-none"></span>Taskmaster Pro Edition</h1>
                 <div class ="ml-md-auto w-100 w-md-auto">
-            <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal"><span class="oi oi-plus mr-2"></span>Add Task</button>
-            <button id="remove-tasks" class="btn btn-block btn-danger"><span class="oi oi-trash mr-2"></span>Delete All Tasks</button>
+            <button id="create-task" class="btn btn-block btn-add" data-toggle="modal" data-target="#task-form-modal"><span class="oi oi-plus mr-2"></span>Add Task</button>
+            <button id="remove-tasks" class="btn btn-block btn-delete"><span class="oi oi-trash mr-2"></span>Delete All Tasks</button>
             </div>
             </div>
             <span class="oi oi-task display-1 text-center mb-2 d-none d-lg-block mt-auto"></span>
@@ -101,8 +101,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save Task</button>
+                    <button type="button" class="btn btn-close" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-save">Save Task</button>
                 </div>
             </div>
         </div>
